@@ -10,19 +10,11 @@ public class T1_P2_H2 extends Itineraire {
         this.sommets = new ArrayList<>();
     }
 
-    /** -------------------------
-     *    CALCUL DU CYCLE / CHEMIN EULÉRIEN
-     *  ------------------------- */
-    public void eulerianPathOrCycle() {
-
+    public void eulerPrime() {
         int n = this.graphe.nb_sommets;
-
-        // Copie de l'adjacence pour ne pas détruire le graphe original
         int[][] adjCopy = new int[n][n];
         for (int i = 0; i < n; i++)
             System.arraycopy(this.graphe.matrice.adj[i], 0, adjCopy[i], 0, n);
-
-        // Détecter les sommets impairs
         ArrayList<Integer> impairs = new ArrayList<>();
         for (int i = 0; i < n; i++) {
             int deg = 0;
@@ -31,9 +23,8 @@ public class T1_P2_H2 extends Itineraire {
             if (deg % 2 == 1)
                 impairs.add(i);
         }
-
         int curr;
-        if (impairs.size() == 0) {
+        if (impairs.isEmpty()) {
             // Cycle eulérien → départ arbitraire
             curr = 0;
         } else if (impairs.size() == 2) {
@@ -43,14 +34,11 @@ public class T1_P2_H2 extends Itineraire {
             System.out.println("Impossible : plus de 2 sommets impairs");
             return;
         }
-
         Stack<Integer> stack = new Stack<>();
         stack.push(curr);
         ArrayList<Sommet> path = new ArrayList<>();
-
         while (!stack.isEmpty()) {
             boolean hasEdge = false;
-
             for (int next = 0; next < n; next++) {
                 if (adjCopy[curr][next] > 0) {
                     adjCopy[curr][next]--;
@@ -62,30 +50,22 @@ public class T1_P2_H2 extends Itineraire {
                     break;
                 }
             }
-
             if (!hasEdge) {
                 path.add(new Sommet(curr));
                 curr = stack.pop();
             }
         }
-
         this.sommets = path;
     }
 
-    /** -------------------------
-     *      AFFICHAGE FORMATÉ
-     *      0 -> (distance) -> 1 ...
-     *  ------------------------- */
     @Override
     public void afficher_chemin() {
         if (this.sommets.size() < 2) {
             System.out.println("Aucun chemin à afficher.");
             return;
         }
-
         System.out.println("Chemin / Cycle eulérien :");
         int total = 0;
-
         for (int i = 0; i < this.sommets.size() - 1; i++) {
             Sommet a = this.sommets.get(i);
             Sommet b = this.sommets.get(i + 1);
@@ -93,11 +73,8 @@ public class T1_P2_H2 extends Itineraire {
             total += dist;
             System.out.print(a.numero + " -> (" + dist + ") -> ");
         }
-
-        // Afficher le dernier sommet (fin du chemin)
-        Sommet last = this.sommets.get(this.sommets.size() - 1);
+        Sommet last = this.sommets.getLast();
         System.out.print(last.numero);
-
         System.out.println("\nDistance totale : " + total);
     }
 }
